--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "@wixc3/react-board": "^2.2.0",
+    "http-proxy-middleware": "^2.0.6",
     "sass": "^1.62.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.1"
