--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
-
   "dependencies": {
     "axios": "^1.3.5",
+    "body-parser": "^1.20.2",
     "classnames": "^2.3.2",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
