--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "proxy": "http://182.69.180.80:8081"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "response-time": "^2.3.2"
+  }
 }
